--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ default: &default
 
 development:
   <<: *default
-  database: spk-ahp_development
+  database: stpk_testing
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
